--- a/src/app/main/contract/shared/sign-sample-contract/sign-contract/sign-contract.component.html
+++ b/src/app/main/contract/shared/sign-sample-contract/sign-contract/sign-contract.component.html
@@ -18,10 +18,14 @@
 
   <!-- drag & drop text contract templace -->
   <input *ngIf="sign.sign_unit == 'text' && sign.is_have_text" id="input-text-value" placeholder="Nhập nội dung Text.."
-    [(ngModel)]="sign.value" type="text" (ngxInputSearch)="doTheSearch($event)">
+    [(ngModel)]="sign.value" type="text" (ngxInputSearch)="doTheSearch($event,'text')">
 
   <!-- drag & drop contract number templace -->
-  <input *ngIf="getNotSpecifiedYetHandle()" id="input-number-value"
+  <input *ngIf="getNotSpecifiedYetHandle() && this.contractNo" id="input-number-value"
+    (focusout)="focusOutFunction()" [(ngModel)]="this.contractNo" placeholder="Nhập số hợp đồng.." type="text"
+    (ngxInputSearch)="doTheSearch($event,'contractNo')">
+
+    <input *ngIf="getNotSpecifiedYetHandle() && !this.contractNo" id="input-number-value"
     (focusout)="focusOutFunction()" [(ngModel)]="sign.value" placeholder="Nhập số hợp đồng.." type="text"
-    (ngxInputSearch)="doTheSearch($event)">
+    (ngxInputSearch)="doTheSearch($event,'contractNo')">
 </div>
