--- a/src/app/main/contract-signature/shared/model/forward-contract/forward-contract.component.html
+++ b/src/app/main/contract-signature/shared/model/forward-contract/forward-contract.component.html
@@ -5,14 +5,14 @@
   <form (ngSubmit)="onSubmit()" [formGroup]="myForm" class="content">
 
 
-    <div *ngIf="!isReqCardIdToken" class="row">
+    <!-- <div *ngIf="!isReqCardIdToken" class="row">
       <div class="col">
         <input type="radio" (change)="changeTypeSign($event)" value="email" name="login" [checked]="true"/>{{'typeOfSignEmail' | translate}}
       </div>
       <div class="col">
         <input type="radio" (change)="changeTypeSign($event)" value="phone" name="login"/>{{'typeOfSignPhone' | translate}}
       </div>
-    </div>
+    </div> -->
 
     <div class="name-item">
       <div class="label_item">{{'user.name' | translate}} <span class="require_star">*</span></div>
