--- a/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
@@ -103,7 +103,7 @@
              (click)="getSignSelect(d)"
              [ngClass]="changeColorDrag(null, d, true)"
              [ngStyle]="changePosition(d,null,null,'#EBF8FF')">
-          <!-- <app-image-sign-contract  id="image-sign-contract" 
+          <app-image-sign-contract  id="image-sign-contract" 
             (contractNoValue)="contractNoValueChange($event)"
             [contractNoValue]="contractNoValue"
             [contractNoValueSign]="contractNoValueSign"
@@ -111,7 +111,7 @@
             *ngIf="![2,3].includes(recipient.status)" 
             [datas]="datas" [view]="[2,3].includes(recipient.status)" 
             [sign]="d">
-          </app-image-sign-contract> -->
+          </app-image-sign-contract>
           <div *ngIf="this.flagFocus && d.sign_unit == 'text'" class="name-sig-img-daky">{{(d.name && !d.valueSign) ? d.name : ''}}</div>
           <div *ngIf="d.sign_unit != 'text' && !this.flagFocus" class="name-sig-img-daky">{{(d.name && !d.valueSign) ? d.name : ''}}</div>
         </div>
