chỉnh css lúc tạo hợp đồng của ô text

--- a/src/app/main/contract/shared/sign-sample-contract/sign-contract/sign-contract.component.scss
+++ b/src/app/main/contract/shared/sign-sample-contract/sign-contract/sign-contract.component.scss
@@ -23,4 +23,13 @@
   background-color: rgb(235, 248, 255);
   border: none;
   outline: none;
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+
+  // width: 125px;
+  // border: 0px;
+  // height: 25px;
+  // outline: none;
+  // color: #106DB6;
 }
