--- a/src/app/main/contract-signature/components/consider-contract/image-sign-contract/image-sign-contract.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/image-sign-contract/image-sign-contract.component.html
@@ -19,7 +19,10 @@
 </div>
 
 <div class="text-sign" *ngIf="sign.sign_unit == 'text'">
-  <div class="skeleton-sign" (click)="doEditText()" *ngIf="!checkShowEdit">
+  <div class="skeleton-sign" (click)="doEditText()" *ngIf="!checkShowEdit && !sign.valueSign">
+    <span id="input-text" [ngbTooltip]="sign.valueSign ? sign.valueSign : ''">{{getText(sign)}}</span>
+  </div>
+  <div class="skeleton-sign-value" (click)="doEditText()" *ngIf="!checkShowEdit && sign.valueSign">
     <span id="input-text" [ngbTooltip]="sign.valueSign ? sign.valueSign : ''">{{getText(sign)}}</span>
   </div>
   <div class="skeleton-sign" *ngIf="checkShowEdit">
