--- a/src/app/main/contract-signature/components/consider-contract/image-sign-contract/image-sign-contract.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/image-sign-contract/image-sign-contract.component.html
@@ -31,9 +31,11 @@
 </div>
 
 <div class="text-sign" *ngIf="sign.sign_unit == 'so_tai_lieu'">
-  <div class="skeleton-sign" (click)="doEditContractNo()" *ngIf="!contractNoValue && count == 0">
+  <div class="skeleton-sign" (click)="doEditContractNo()" *ngIf="!contractNoValue && count == 0 && !sign.valueSign">
     <span id="input-text"   [ngbTooltip]="sign.valueSign ? sign.valueSign : ''">{{getText(sign)}}</span>
-    <!-- <input id="input" type="text" class="input-edit-text" [(ngModel)]="contractNoValueSign" (blur)="doneEditContractNoSign(sign)" #inputEditContractNo> -->
+  </div>
+  <div class="skeleton-sign-value" (click)="doEditContractNo()" *ngIf="!contractNoValue && count == 0 && sign.valueSign">
+    <span id="input-text"   [ngbTooltip]="sign.valueSign ? sign.valueSign : ''">{{getText(sign)}}</span>
   </div>
   <div class="skeleton-sign" *ngIf="contractNoValue || count > 0">
     <input style="text-align: center;" id="input" type="text" class="input-edit-text" [(ngModel)]="contractNoValueSign" (blur)="doneEditContractNoSign(sign)" #inputEditContractNo>
