--- a/src/app/main/contract/shared/sign-sample-contract/sign-contract/sign-contract.component.scss
+++ b/src/app/main/contract/shared/sign-sample-contract/sign-contract/sign-contract.component.scss
@@ -33,3 +33,16 @@
   // outline: none;
   // color: #106DB6;
 }
+
+.text-sign-not-template {
+  // width: 100%;
+  // background-color: rgb(235, 248, 255);
+  // border: none;
+  // outline: none;
+
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  outline: none;
+  color: #106DB6;
+}
