--- a/src/app/main/contract/shared/sign-sample-contract/sign-contract/sign-contract.component.scss
+++ b/src/app/main/contract/shared/sign-sample-contract/sign-contract/sign-contract.component.scss
@@ -14,9 +14,9 @@
   color: #106DB6;
 }
 
-.font-style {
-  font-size: 11px !important;
-}
+// .font-style {
+//   font-size: 11px !important;
+// }
 
 #input-text-value, #input-number-value {
   width: 100%;
@@ -26,20 +26,9 @@
   position: absolute;
   bottom: 0px;
   left: 0px;
-
-  // width: 125px;
-  // border: 0px;
-  // height: 25px;
-  // outline: none;
-  // color: #106DB6;
 }
 
 .text-sign-not-template {
-  // width: 100%;
-  // background-color: rgb(235, 248, 255);
-  // border: none;
-  // outline: none;
-
   position: absolute;
   bottom: 0px;
   left: 0px;
