--- a/src/app/main/contract-signature/shared/model/edit-handler-dialog/edit-handler-dialog.component.scss
+++ b/src/app/main/contract-signature/shared/model/edit-handler-dialog/edit-handler-dialog.component.scss
@@ -321,10 +321,12 @@
         }
   
         .participants--input {
+          background-color: "red";
           display: flex;
           justify-content: space-around;
   
           .participants__name {
+            // background-color: blue;
             width: 42%;
   
             .input-data {
