fix số hợp đồng

--- a/src/app/main/contract-signature/components/consider-contract/image-sign-contract/image-sign-contract.component.scss
+++ b/src/app/main/contract-signature/components/consider-contract/image-sign-contract/image-sign-contract.component.scss
@@ -14,8 +14,9 @@
 
 .input-edit-text {
   width: 101%;
-  border: 1px solid #106DB6;
+  // border: 1px solid #106DB6;
   padding: 4px;
   margin-left: -1px;
   border-radius: 3px;
+  border: none;
 }
