--- a/src/app/main/contract/shared/sign-sample-contract/sign-contract/sign-contract.component.html
+++ b/src/app/main/contract/shared/sign-sample-contract/sign-contract/sign-contract.component.html
@@ -7,8 +7,13 @@
   <ng-template #other_content>{{'sign.digital'|translate}}</ng-template>
 </div>
 
-<!-- && !signTemplate -->
-<div class="text-sign-not-template" *ngIf="(sign.sign_unit == 'text' || sign.sign_unit == 'so_tai_lieu') && !signTemplate">
+<!-- && !signTemplate && text -->
+<div class="text-sign-not-template-text" *ngIf="(sign.sign_unit == 'text') && !signTemplate">
+  <span [ngStyle]="getStyleText(sign)" class="font-style" id="input-text">{{getText(sign)}}</span>
+</div>
+
+<!-- && !signTemplate && so tai lieu -->
+<div class="text-sign-not-template-contract-code" *ngIf="(sign.sign_unit == 'so_tai_lieu') && !signTemplate">
   <span [ngStyle]="getStyleText(sign)" class="font-style" id="input-text">{{getText(sign)}}</span>
 </div>
 
