--- a/src/app/main/contract/batch-contract/confirm-contract-batch/confirm-contract-batch.component.scss
+++ b/src/app/main/contract/batch-contract/confirm-contract-batch/confirm-contract-batch.component.scss
@@ -356,6 +356,7 @@
       left: 6px;
       padding: 0 4px;
       border: 1px solid #ddd;
+      width: 100px;
   }
   .sig-img-daky {
       cursor: pointer;
