--- a/src/app/main/contract-template/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract-template/shared/model/determine-signer/determine-signer.component.html
@@ -416,7 +416,7 @@
         
         <!-- To chuc ky -->
         <div *ngIf="item.type == 2">
-         <div class="participants-border">
+         <!-- <div class="participants-border">
            <div class="label" style="justify-content: space-between;">
              <div>
              {{'user.lead' | translate}}
@@ -434,9 +434,9 @@
                   <div style="padding: 0 20px 0 5px">Nhận SMS thông báo khi xử lý hợp đồng</div>
                 </div> -->
 
-              </div>
+              <!-- </div>
             </div>
-         </div>
+         </div>  -->
 
           <!--Người xem xét-->
           <div class="participants-border">
