ký hsm có ô text/số hợp đồng và văn thư được ký hsm

--- a/src/app/main/contract-signature/shared/model/processing-handle-econtract/processing-handle-econtract.component.html
+++ b/src/app/main/contract-signature/shared/model/processing-handle-econtract/processing-handle-econtract.component.html
@@ -49,7 +49,7 @@
                         </div>
 
                         <div *ngIf = "d.statusNumber != 0 && d.statusNumber !== 4" class="div_icon">
-                             <!-- <img src="../../assets/img/icon_edit.svg" class="img_icon" ngbTooltip="{{'update.person-process' | translate}}" (click)="openEdit(d.id)"/> -->
+                             <img src="../../assets/img/icon_edit.svg" class="img_icon" ngbTooltip="{{'update.person-process' | translate}}" (click)="openEdit(d.id)"/>
                         </div>
                     
 
