--- a/src/app/main/contract/shared/model/infor-contract/infor-contract.component.html
+++ b/src/app/main/contract/shared/model/infor-contract/infor-contract.component.html
@@ -20,6 +20,7 @@
   <div class="row">
     <div class="col-md-12">
 
+      <!--upload file hợp đồng-->
       <div class="form-group">
         <div class="label_item">{{'contract.file' | translate}} <span class="require_star">*</span></div>
         <input id="file-input" type="file" accept=".pdf" (change)="fileChanged($event)" style="display: none;" />
