--- a/src/app/main/contract-signature/components/text-signature-image/text-signature-image.component.html
+++ b/src/app/main/contract-signature/components/text-signature-image/text-signature-image.component.html
@@ -1,3 +1,3 @@
-<div style="left: 0px" [style.width.px]="width" [style.height.px]="height" [ngStyle]="getStyleText()">
-  <p style="left: 0px" id="text-sign">{{textSign}}</p>
+<div [ngStyle]="getStyleText()">
+  <p id="text-sign">{{textSign}}</p>
 </div>
