--- a/src/app/main/contract-signature/shared/model/edit-handler-dialog/edit-handler-dialog.component.html
+++ b/src/app/main/contract-signature/shared/model/edit-handler-dialog/edit-handler-dialog.component.html
@@ -50,6 +50,9 @@
                 <img src="assets/img/icon_name.svg" class="input-img">
                 <input type="text" placeholder="{{'nhap_ho_va_ten' | translate}}" [(ngModel)]="name">
               </div>
+              <div class="invalid" *ngIf="errorName!=''">
+                {{errorName | translate}}
+              </div>
             </div>
 
             <div class="participants__name" *ngIf="role !== 2">
@@ -73,6 +76,9 @@
               <input type="text" placeholder="{{'nhap_email' | translate}}" [(ngModel)]="email"
                 (keydown)="keyDownHandler($event)" />
             </div>
+            <div class="invalid" *ngIf="errorEmail!=''">
+              {{errorEmail | translate}}
+            </div>
           </div>
 
           <div class="participants__name" style="width: 93%" *ngIf="!isCheckRadio">
@@ -81,6 +87,9 @@
             <div class="input-data">
               <img class="input-img">
               <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="phone" />
+            </div>
+            <div class="invalid" *ngIf="errorPhone!=''">
+              {{errorPhone | translate}}
             </div>
           </div>
         </div>
@@ -94,6 +103,9 @@
               <input type="text" placeholder="{{'nhap_email' | translate}}" [(ngModel)]="email" value="{{this.email}}"
                 (keydown)="keyDownHandler($event)">
             </div>
+            <div class="invalid" *ngIf="errorEmail!=''">
+              {{errorEmail | translate}}
+            </div>
           </div>
 
           <div class="participants__name">
@@ -103,6 +115,9 @@
             <div class="input-data">
               <img src="assets/img/login_email.svg" class="input-img">
               <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="phone" value="{{this.phone}}">
+            </div>
+            <div class="invalid" *ngIf="errorPhone!=''">
+              {{errorPhone | translate}}
             </div>
           </div>
         </div>
@@ -114,6 +129,9 @@
             <div class="input-data">
               <img src="assets/img/login_email.svg" class="input-img">
               <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="phone">
+            </div>
+            <div class="invalid" *ngIf="errorPhone!=''">
+              {{errorPhone | translate}}
             </div>
           </div>
         </div>
@@ -129,6 +147,9 @@
               <input type="text" placeholder="{{'enter.tax_code.cardId' | translate}}" [(ngModel)]="card_id"
                 oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
             </div>
+            <div class="invalid" *ngIf="errorCardid!=''">
+              {{errorCardid | translate}}
+            </div>
           </div>
         </div>
 
@@ -143,6 +164,9 @@
               <input type="text" placeholder="{{'enter.tax.code' | translate}}" [(ngModel)]="card_id"
                 oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
             </div>
+            <div class="invalid" *ngIf="errorCardid!=''">
+              {{errorCardid | translate}}
+            </div>
           </div>
         </div>
 
@@ -156,6 +180,9 @@
               <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="phone"
                 oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
             </div>
+            <div class="invalid" *ngIf="errorPhone!=''">
+              {{errorPhone | translate}}
+            </div>
           </div>
         </div>
 
@@ -167,6 +194,9 @@
             <div class="input-data">
               <input type="text" placeholder="{{'enter.cardId' | translate}}" [(ngModel)]="card_id"
                 oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
+            </div>
+            <div class="invalid" *ngIf="errorCardid!=''">
+              {{errorCardid | translate}}
             </div>
           </div>
         </div>
