--- a/src/app/main/contract-template/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract-template/shared/model/determine-signer/determine-signer.component.html
@@ -1121,6 +1121,39 @@
                   </div>
                 </div>
 
+                <div *ngIf="d.login_by == 'email' && getDataSignCka(d).length > 0" class="participants--input" style="display: flex;">
+                  <div class="participants__name" style="margin-right: 50%; display: flex;">
+                    <div class="label_detail text-color" style="margin-right: 5px; margin-top: 8px;">{{'sms.locale' |
+                      translate}}&nbsp;
+                      <span class="required-title">*</span>
+                    </div>
+                    <div class="input-data" style="width: 15%; margin-top: 8px;">
+                      <div ngbDropdown class="d-inline-block" style="margin-left: 6px;" [(ngModel)]="d.locale">
+                        <div *ngIf="d.locale =='vi'">
+                          <button *ngIf="d.locale =='vi'" class="btn btn-outline-primary db_icon_vietnam"
+                            id="dropdownMenu1" ngbDropdownToggle>{{dropdownButtonText}}</button>
+                        </div>
+                        <div *ngIf="d.locale =='en'">
+                          <button *ngIf="d.locale =='en'" class="btn btn-outline-primary db_icon_english"
+                            id="dropdownMenu1" ngbDropdownToggle>{{dropdownButtonText}}</button>
+                        </div>
+                        <div ngbDropdownMenu aria-labelledby="dropdownMenu1" style="min-width: 6rem;">
+                          <div class="switch-language">
+                            <button class="db_icon_vietnam" ngbDropdownItem (click)="d.locale = 'vi'">
+                              <div class="language">{{ "vie" | translate }}</div>
+                            </button>
+                          </div>
+                          <div class="switch-language">
+                            <button class="db_icon_english" ngbDropdownItem (click)="d.locale = 'en'">
+                              <div class="language">{{ "eng" | translate }}</div>
+                            </button>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
                 <div *ngIf="this.site === 'NB' && d.login_by === 'email'" class="participants--input"
                   style="display: flex">
                   <div class="participants__name" style="width: 90%">
